--- a/app/styles/style.module.scss
+++ b/app/styles/style.module.scss
@@ -1,11 +1,11 @@
-/* styles/Form.module.scss */
+
 .form {
     display: flex;
     flex-direction: column;
     gap: 12px;
     width: 100%;
     max-width: 400px;
-    margin: 200 auto;
+    margin: 200 auto 20px;
     padding: 16px;
   
     @media (min-width: 600px) {
@@ -34,5 +34,13 @@
     &:hover {
       background-color: #005dc1;
     }
+  }
+  .errorMessage {
+    color: #e63946;      
+    font-size: 0.875rem;  
+    text-align: center;       
+  width: 100%;
+    font-weight: 500;     
+    font-family: Arial, sans-serif; 
   }
   
