--- a/app/styles/style.module.scss
+++ b/app/styles/style.module.scss
@@ -5,7 +5,8 @@
     gap: 12px;
     width: 100%;
     max-width: 400px;
-    margin: 200 auto 20px;
+    margin: 200px auto;
+    margin-bottom: 10px;
     padding: 16px;
   
     @media (min-width: 600px) {
